# opuscule

./: Cargo.toml
common/: Cargo.toml
config/: default.toml
config/custom_streaming/: ancientfm.url
crates/counting_client/: Cargo.toml
crates/server/src/: common.rs  main.rs
crates/server/src/clients/: mod.rs  ui_client_controller.rs  ui_client_messages.rs
crates/server/src/state/: audio.rs  menu.rs  mod.rs
crates/server/src/system/: favorites.rs  mod.rs
doc/: components.md  design_rationale.md
opuscule-cli-client/: Cargo.toml
opuscule-server/: Cargo.toml
opuscule-server/src/: command_handler.rs  comp_streaming.rs  external_client_handler.rs  main.rs  state.rs
opuscule-server/src/ui_clients/: lib.rs  mod.rs
opuscule-tui-client/: Cargo.toml
resources/settings/custom_streaming/: psy-trance.m3u  venice_classic_radio.pls
resources/settings/server/: opuscule_settings.conf
src/: audio_state.rs  command_handler.rs  common.rs  controller.rs  main.rs  settings.rs
src/clients/: ui_client_controller.rs
src/component-internal_testing/: internal_testing.rs  mod.rs
src/component_internal_testing/: internal_testing.rs  internal_testing_sine.rs  mod.rs
src/components/: mod.rs
src/components/component_internal_testing/: nullcomp.rs
src/components/component_streaming_custom/: custom_streaming.rs
src/components/internal_testing/: nullcomp.rs
src/player/: internal_command_protocol.rs  mod.rs
src/state/: audio.rs  configure.rs  menu.rs  mod.rs  now_playing.rs  state.rs  state_controller.rs
src/system/: command.rs  favorites.rs
src/ui_clients/: mod.rs
tests/: Cargo.toml
(+3 files in other folders)
