[package]
name = "opuscule-server"
version = "0.1.0"
authors = ["Paul Mazaitis <paul@mazaitis.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
tokio = { version="1.7", features=["full"] }
serde = { version="1.0.126", features=["derive"] }
serde_json = "1.0.59"
tokio-serde-json = "0.3.0"
