[package]
name = "opuscule-server"
version = "0.1.0"
authors = ["Paul Mazaitis <paul@mazaitis.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version="1.7", features=["full"] }
serde = { version="1.0.126", features=["derive"] }
serde_json = "1"
tokio-serde-json = "0.3"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.2"
state_machine_future = "0.2.0"
